Skip to content

4.0 regression: live input crashes pseudo-randomly

Almost systematic after starting a V4L capture, but I think I have also seen it occasionally with RTP:

[00007f7445a1f4e0] main generic debug: using access module "v4l2"
[000061e000002480] main input debug: The input can't pace, selecting the input (PCR) as the clock source
vlc: ../../src/clock/input_clock.c :203 : input_clock_AttachListener:  l'assertion « !cl->b_has_reference » a échoué.

Thread 19 "vlc" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffc3585640 (LWP 3182)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
49      ../sysdeps/unix/sysv/linux/raise.c: Aucun fichier ou dossier de ce type.
(gdb) bt
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
#1  0x00007ffff5923546 in __GI_abort () at abort.c:79
#2  0x00007ffff592342f in __assert_fail_base (
    fmt=0x7ffff051e5aa "%s%s%s :%u : %s%s l'assertion « %s » a échoué.\n%n", assertion=0x7ffff6cf0fa0 "!cl->b_has_reference", 
    file=0x7ffff6cf0f00 "../../src/clock/input_clock.c", line=203, 
    function=<optimized out>) at assert.c:92
#3  0x00007ffff5932222 in __GI___assert_fail (
    assertion=0x7ffff6cf0fa0 "!cl->b_has_reference", 
    file=0x7ffff6cf0f00 "../../src/clock/input_clock.c", line=203, 
    function=0x7ffff6cf11e0 <__PRETTY_FUNCTION__.6> "input_clock_AttachListener") at assert.c:101
#4  0x00007ffff6965359 in input_clock_AttachListener (cl=0x60d000076b10, 
    clock_listener=0x607000059180) at ../../src/clock/input_clock.c:203
#5  0x00007ffff69bd479 in EsOutProgramHandleClockSource (out=0x613000008a38, 
    p_pgrm=0x608000020d20) at ../../src/input/es_out.c:1338
#6  0x00007ffff69e20fd in EsOutVaPrivControlLocked (out=0x613000008a38, 
    query=65536, args=0x7fffc35845f0) at ../../src/input/es_out.c:3705
#7  0x00007ffff69e7ab8 in EsOutPrivControl (out=0x613000008a38, query=65536, 
    args=0x7fffc35845f0) at ../../src/input/es_out.c:4011
#8  0x00007ffff69f02b2 in es_out_vaPrivControl (out=0x613000008a38, 
    query=65536, args=0x7fffc35845f0) at ../../src/input/es_out.h:105
#9  0x00007ffff69f03e8 in es_out_PrivControl (out=0x613000008a38, query=65536)
    at ../../src/input/es_out.h:112
#10 0x00007ffff6a080a4 in CmdExecutePrivControl (p_tsout=0x608000020ff8, 
    p_cmd=0x7fffc3584800) at ../../src/input/es_out_timeshift.c:1807
#11 0x00007ffff69f5be8 in PrivControlLocked (p_tsout=0x608000020ff8, 
    i_query=65536, args=0x7fffc3584970)
    at ../../src/input/es_out_timeshift.c:799
#12 0x00007ffff69f661b in PrivControl (p_tsout=0x608000020ff8, i_query=65536, 
    args=0x7fffc3584970) at ../../src/input/es_out_timeshift.c:858
#13 0x00007ffff6a0dc4c in es_out_vaPrivControl (out=0x608000020ff8, 
    query=65536, args=0x7fffc3584970) at ../../src/input/es_out.h:105
#14 0x00007ffff6a0dd82 in es_out_PrivControl (out=0x608000020ff8, query=65536)
    at ../../src/input/es_out.h:112
#15 0x00007ffff6a0de2a in es_out_SetMode (p_out=0x608000020ff8, i_mode=2)
    at ../../src/input/es_out.h:119
#16 0x00007ffff6a1db1b in InitPrograms (p_input=0x61e000002480)
    at ../../src/input/input.c:1272
#17 0x00007ffff6a1ec39 in Init (p_input=0x61e000002480)
    at ../../src/input/input.c:1361
#18 0x00007ffff6a12aec in Run (data=0x61e000002480)
--Type <RET> for more, q to quit, c to continue without paging--
    at ../../src/input/input.c:466
#19 0x00007ffff5ae1d80 in start_thread (arg=0x7fffc3585640)
    at pthread_create.c:481
#20 0x00007ffff59fb76f in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information