es_out: fix automatic clock selection

When the PCR is sent before the module probe function finishes (threaded
modules).

Fixes #26716